Refactor of users

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 /.vscode
+/la_diam_backend/la_diam_backend/__pycache__
+/la_diam_backend/la_diam_backend/__pycache__
+/la_diam_backend/la_diam_backend/__pycache__
