Added Users to front end

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /la_diam_backend/la_diam_backend/__pycache__
 /la_diam_backend/la_diam_backend/__pycache__
 /la_diam_backend/la_diam_backend/__pycache__
+/la_diam_backend/la_diam_backend/__pycache__
+la_diam_backend/pizzaria/__pycache__/views.cpython-313.pyc
