Update Header component with responsive navbar and enhance styles; modify CSS variables for consistency

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,16 @@ yarn-error.log*
 # Backend (Python/Django)
 *.pyc
 __pycache__/
+
+
+
+
+# Editor-specific files
+.vscode/
+.idea/
+*.sublime-workspace
+*.sublime-project
+
+
+# Miscellaneous
+/settings.json
